# goit-projects

./: README.md  birth_day.py  blackbox  bot.py  bot_2.0.py  bot_with_classes.py  sort.py  test.py
botcontacts3.0/: AdressBook.py  Dockerfile  Message.py  bot_3.0.py  chat_bot_uml.html
clean_folder/: setup.py
clean_folder/clean_folder/: sort.py  translate_name.py
clean_folder/clean_folder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python web/module 1/: Abstract.py  Meta.py
python web/module 2/: chatbot diagram.drawio
python web/module 3/: mp_factorize.py  mt_sort.py
python web/module 4/: app.py
python web/module 4/storage/: data.json
python web/module 5/: main.py
python web/module 6/: main.py  seeds.py  task_1.sql  task_10.sql  task_2.sql  task_3.sql  task_4.sql  task_5.sql  task_6.sql  task_7.sql  task_8.sql  task_9.sql  university.db
python web/module 7/: config.ini  my_select.py  pyproject.toml  seed.py
python web/module 7/migrations/versions/: 453d061bbca8_init.py
